--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@babylonjs/core": "^6.7.0",
     "@babylonjs/gui": "^6.7.0",
+    "@babylonjs/havok": "^1.0.1",
     "@babylonjs/loaders": "^6.7.0"
   }
 }
