--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@babylonjs/core": "^6.7.0",
     "@babylonjs/gui": "^6.7.0",
     "@babylonjs/havok": "^1.1.0",
-    "@babylonjs/loaders": "^6.7.0"
+    "@babylonjs/inspector": "^6.12.1",
+    "@babylonjs/loaders": "^6.7.0",
+    "babylonjs-viewer": "^6.12.1"
   }
 }
